@@ -27,6 +27,14 @@ dependencies {
 	testImplementation('org.spockframework:spock-spring:2.0-M3-groovy-3.0')
 }
 
+compileJava {
+	options.compilerArgs += ['--enable-preview']
+}
+
+tasks.withType(Test).all {
+	jvmArgs += '--enable-preview'
+}
+
 test {
 	useJUnitPlatform()
 }
